aligning bug fix

--- a/style.css
+++ b/style.css
@@ -23,11 +23,10 @@ ul{
   box-shadow:  12px 12px 24px #8c8e7e, 
              -12px -12px 24px #caccb6;
   display: flex;
-  /* text-align: center; */
   flex-wrap: wrap;
   width: 306px;
   padding: 0;
-  /* margin: 0 auto; */
+  margin-top: 10px;
   user-select: none;
   flex-shrink: 0;
 }
@@ -57,7 +56,6 @@ span{
   text-align: center;
   padding: 34px;
   width: 143px;
-  margin: 10px;
   border-radius: 4px;
   background: linear-gradient(145deg, #c6c9a2, #a7a988);
   box-shadow: 20px 20px 39px #9da080, -20px -20px 39px #d5d8ae;
